--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/parser": "^7.18.11",
     "@babel/traverse": "^7.18.11",
     "glob": "^8.0.3",
-    "jest": "^28.1.3"
+    "jest": "^28.1.3",
+    "lodash": "^4.17.21"
   }
 }
