--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "glob": "^8.0.3",
     "jest": "^28.1.3",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "eslint": "^8.23.0"
   }
 }
